<resources>
    <string name="app_name">OMDB Movie Search</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_tab">Search</string>
    <string name="favorites_tab">Favorites</string>
    <string name="search_text">Search Movie, TV series or episodes by title</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Not Favorite</string>
    <string name="title_hint">Title</string>
    <string name="director_year_hint">Director (Year)</string>
    <string name="plot_summary_hint">Plot Summary</string>
    <string name="writer_hint">Writer</string>
    <string name="actors_hint">Actors</string>
    <string name="rated_released_runtime_genre_hint">Rated / Released / Runtime / Genre</string>
    <string name="language_country_metascore_imdbrating_hint">Language / Country / MetaScore / IMDB Rating</string>
    <string name="awards_hint">Awards</string>
    <string name="dismiss">Dismiss</string>

    <string name="title">Title : %1$s</string>
    <string name="director_year">Director (Year) : %1$s (%2$s)</string>
    <string name="plot_summary">Plot : %1$s</string>
    <string name="writer">Writer(s) : %1$s</string>
    <string name="actors">Actors : %1$s</string>
    <string name="rated_released_runtime_genre">Rated : %1$s / Released : %2$s / Runtime : %3$s / Genre : %4$s</string>
    <string name="language_country_metascore_imdbrating">Language : %1$s / Country : %2$s / MetaScore : %3$s / IMDB Rating : %4$s</string>
    <string name="awards">Awards : %1$s</string>

    <string name="item_detail_title">Movie / TV Series detail</string>

</resources>
