<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/poster"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp" />

        <ToggleButton
            android:id="@+id/favorite_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/toggle_button_selector"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="4dp"
            android:textColor="@color/material_blue_grey_800"
            android:textOff="@string/unfavorite"
            android:textOn="@string/favorite"
            android:textSize="6sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/title_hint"
            android:maxLines="2"
            android:padding="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/director_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/director_year_hint"
            android:maxLines="2"
            android:padding="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/writer_hint"
            android:maxLines="2"
            android:padding="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/actors_hint"
            android:maxLines="3"
            android:padding="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rated_released_runtime_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/rated_released_runtime_genre_hint"
            android:maxLines="3"
            android:padding="2dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/plot_summary_hint"
            android:maxLines="6"
            android:padding="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/language_country_metascore_imdbrating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/language_country_metascore_imdbrating_hint"
            android:maxLines="3"
            android:padding="2dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/awards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/awards_hint"
            android:maxLines="3"
            android:padding="2dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:text="@string/dismiss" />

    </LinearLayout>

</ScrollView>
