<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_margin="5dp"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/poster"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:layout_width="72dp"
        android:layout_height="72dp" />

    <ToggleButton
        android:id="@+id/favorite_button"
        android:layout_below="@id/poster"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:textSize="6sp"
        android:textColor="@color/material_blue_grey_800"
        android:padding="3dp"
        android:background="@drawable/toggle_button_selector"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff="@string/unfavorite"
        android:textOn="@string/favorite"/>

    <TextView
        android:id="@+id/title"
        android:lines="1"
        android:layout_toRightOf="@id/poster"
        android:textSize="16sp"
        android:hint="@string/title_hint"
        android:maxWidth="240dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/director_year"
        android:lines="1"
        android:layout_toRightOf="@id/poster"
        android:layout_below="@id/title"
        android:textSize="16sp"
        android:hint="@string/director_year_hint"
        android:maxWidth="240dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/plot"
        android:maxLines="3"
        android:layout_toRightOf="@id/poster"
        android:layout_below="@id/director_year"
        android:textSize="16sp"
        android:hint="@string/plot_summary_hint"
        android:ellipsize="end"
        android:maxWidth="240dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>